--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -89,7 +89,7 @@
                             <div class="d-flex align-items-center">
                                 <a href="student-take-course.html"
                                    class="avatar avatar-4by3 avatar-sm mr-3">
-                                    <img src="assets/images/gulp.png"
+                                    <img src="{{ ASSETS_ROOT }}/images/gulp.png"
                                          alt="course"
                                          class="avatar-img rounded">
                                 </a>
@@ -129,7 +129,7 @@
                             <div class="d-flex align-items-center">
                                 <a href="student-take-course.html"
                                    class="avatar avatar-4by3 avatar-sm mr-3">
-                                    <img src="assets/images/vuejs.png"
+                                    <img src="{{ ASSETS_ROOT }}/images/vuejs.png"
                                          alt="course"
                                          class="avatar-img rounded">
                                 </a>
@@ -169,7 +169,7 @@
                             <div class="d-flex align-items-center">
                                 <a href="student-take-course.html"
                                    class="avatar avatar-4by3 avatar-sm mr-3">
-                                    <img src="assets/images/nodejs.png"
+                                    <img src="{{ ASSETS_ROOT }}/images/nodejs.png"
                                          alt="course"
                                          class="avatar-img rounded">
                                 </a>
